--- a/gigbanc/index.html
+++ b/gigbanc/index.html
@@ -8,6 +8,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://js.paystack.co/v1/inline.js"></script>
     <style>
+  html {
+    font-size: 14px; /* Reduce from default 16px */
+  }
+
+  body {
+    font-family: 'Poppins', sans-serif;
+  }
+
+  /* Your other animations... */
+</style>
       body {
         font-family: 'Poppins', sans-serif;
       }
